# thomas

./: Cargo.toml  README.md  changelog.md  todo.md
src/: lib.rs
src/components/: comp_identity.rs  comp_terminal_collider.rs  comp_terminal_renderer.rs  comp_transform.rs  comp_transform2d.rs  comp_transform_terminal.rs  mod.rs
src/components/physics/: mod.rs
src/components/services/: comp_engine_stats.rs  comp_input.rs  comp_time.rs  mod.rs
src/components/terminal/: comp_terminal_collider.rs  comp_terminal_renderer.rs  comp_terminal_transform.rs  mod.rs
src/components/ui/: comp_text.rs  comp_world_text.rs  mod.rs
src/core/: component.rs  entity.rs  entity_manager.rs  game.rs  input.rs  message.rs  message_handler.rs  mod.rs  prefab_factory.rs  query.rs  scene.rs  scene_manager.rs  system.rs  time.rs
src/core/behaviours/: behaviour.rs  behaviour_list.rs  mod.rs  renderable.rs  terminal_collider.rs  terminal_renderable.rs  transform.rs
src/core/data/: coords.rs  dimensions_2d.rs  layer.rs  matrix.rs  mod.rs  priority.rs  timer.rs  transform.rs  ui.rs  vector2.rs
src/core/physics/: mod.rs  physics_engine.rs  terminal_physics_engine.rs
src/core/renderer/: mod.rs  renderer.rs  terminal_renderer.rs
src/services/: input.rs  mod.rs  time.rs
src/systems/: mod.rs  sys_engine_analysis.rs  sys_services.rs  sys_terminal_collisions.rs  sys_terminal_renderer.rs  sys_terminal_ui_renderer.rs
src/test_util/: mock_fn.rs  mod.rs
thomas_derive/: Cargo.toml
thomas_derive/src/: lib.rs
thomas_proc/: Cargo.toml
thomas_proc/src/: lib.rs
(+5 files in other folders)
