[package]
name = "thomas"
license = "MIT"
description = "An ECS game engine."
repository = "https://github.com/mrCamelCode/thomas"
keywords = ["gamedev", "ecs", "game", "engine"]
version = "0.2.4"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
device_query = "1.1.2"
thomas_derive = { path = "thomas_derive", optional = false, version = "0.2.0" }
