[package]
name = "thomas_derive"
license = "MIT"
description = "The derive macro package for thomas"
repository = "https://github.com/mrCamelCode/thomas"
keywords = ["gamedev", "ecs", "game", "engine"]
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"